// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeManagementPageWrapper renders renders empty results correctly 1`] = `
<main
  role="main"
>
  <div
    className="hero"
  >
    <div>
      <h1>
        Code Management
      </h1>
    </div>
    <div>
      <img
        alt="edX logo"
        src="https://edx-cdn.org/v3/default/logo-white.svg"
      />
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3 no-gutters"
    >
      <div
        className="col-12 col-xl-3 mb-3 mb-xl-0"
      >
        <h2>
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0"
      >
        <div
          className="pgn__searchfield d-flex"
        >
          <form
            className="d-flex align-items-center w-100"
            onReset={[Function]}
            onSubmit={[Function]}
            role="search"
          >
            <label
              className="m-0"
              htmlFor="pgn-searchfield-input-1"
            >
              <span
                className="sr-only"
              >
                search
              </span>
            </label>
            <input
              className="form-control"
              data-hj-suppress={true}
              disabled={false}
              id="pgn-searchfield-input-1"
              name="searchfield-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Search by email or code..."
              role="searchbox"
              type="text"
              value=""
            />
            <button
              className="btn"
              disabled={false}
              type="submit"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-search "
                data-icon="search"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span
                className="sr-only"
              >
                submit search
              </span>
            </button>
          </form>
        </div>
      </div>
      <div
        className="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
      >
        <button
          className="mr-2 btn btn-link"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon2"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon3"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="alert fade alert-warning show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className="d-flex"
            >
              <div
                className="icon mr-2"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-exclamation-circle"
                  id="Icon4"
                />
              </div>
              <div
                className="message"
              >
                There are no results.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`CodeManagementPageWrapper renders renders error state correctly 1`] = `
<main
  role="main"
>
  <div
    className="hero"
  >
    <div>
      <h1>
        Code Management
      </h1>
    </div>
    <div>
      <img
        alt="edX logo"
        src="https://edx-cdn.org/v3/default/logo-white.svg"
      />
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3 no-gutters"
    >
      <div
        className="col-12 col-xl-3 mb-3 mb-xl-0"
      >
        <h2>
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0"
      >
        <div
          className="pgn__searchfield d-flex"
        >
          <form
            className="d-flex align-items-center w-100"
            onReset={[Function]}
            onSubmit={[Function]}
            role="search"
          >
            <label
              className="m-0"
              htmlFor="pgn-searchfield-input-13"
            >
              <span
                className="sr-only"
              >
                search
              </span>
            </label>
            <input
              className="form-control"
              data-hj-suppress={true}
              disabled={false}
              id="pgn-searchfield-input-13"
              name="searchfield-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Search by email or code..."
              role="searchbox"
              type="text"
              value=""
            />
            <button
              className="btn"
              disabled={false}
              type="submit"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-search "
                data-icon="search"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span
                className="sr-only"
              >
                submit search
              </span>
            </button>
          </form>
        </div>
      </div>
      <div
        className="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
      >
        <button
          className="mr-2 btn btn-link"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon14"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon15"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="mt-3 alert fade alert-danger show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className="d-flex"
            >
              <div
                className="icon mr-2"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-times-circle"
                  id="Icon16"
                />
              </div>
              <div
                className="message"
              >
                <span
                  className="title"
                >
                  Unable to load coupons
                </span>
                Try refreshing your screen (test error)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`CodeManagementPageWrapper renders renders loading state correctly 1`] = `
<main
  role="main"
>
  <div
    className="hero"
  >
    <div>
      <h1>
        Code Management
      </h1>
    </div>
    <div>
      <img
        alt="edX logo"
        src="https://edx-cdn.org/v3/default/logo-white.svg"
      />
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3 no-gutters"
    >
      <div
        className="col-12 col-xl-3 mb-3 mb-xl-0"
      >
        <h2>
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0"
      >
        <div
          className="pgn__searchfield d-flex"
        >
          <form
            className="d-flex align-items-center w-100"
            onReset={[Function]}
            onSubmit={[Function]}
            role="search"
          >
            <label
              className="m-0"
              htmlFor="pgn-searchfield-input-10"
            >
              <span
                className="sr-only"
              >
                search
              </span>
            </label>
            <input
              className="form-control"
              data-hj-suppress={true}
              disabled={false}
              id="pgn-searchfield-input-10"
              name="searchfield-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Search by email or code..."
              role="searchbox"
              type="text"
              value=""
            />
            <button
              className="btn"
              disabled={false}
              type="submit"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-search "
                data-icon="search"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span
                className="sr-only"
              >
                submit search
              </span>
            </button>
          </form>
        </div>
      </div>
      <div
        className="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
      >
        <button
          className="mr-2 btn btn-link"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon11"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon12"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="loading d-flex align-items-center justify-content-center coupons mt-3"
        >
          Loading...
          <span
            className="sr-only"
          >
            Loading
          </span>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`CodeManagementPageWrapper renders renders non-empty results correctly 1`] = `
<main
  role="main"
>
  <div
    className="hero"
  >
    <div>
      <h1>
        Code Management
      </h1>
    </div>
    <div>
      <img
        alt="edX logo"
        src="https://edx-cdn.org/v3/default/logo-white.svg"
      />
    </div>
  </div>
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3 no-gutters"
    >
      <div
        className="col-12 col-xl-3 mb-3 mb-xl-0"
      >
        <h2>
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0"
      >
        <div
          className="pgn__searchfield d-flex"
        >
          <form
            className="d-flex align-items-center w-100"
            onReset={[Function]}
            onSubmit={[Function]}
            role="search"
          >
            <label
              className="m-0"
              htmlFor="pgn-searchfield-input-5"
            >
              <span
                className="sr-only"
              >
                search
              </span>
            </label>
            <input
              className="form-control"
              data-hj-suppress={true}
              disabled={false}
              id="pgn-searchfield-input-5"
              name="searchfield-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Search by email or code..."
              role="searchbox"
              type="text"
              value=""
            />
            <button
              className="btn"
              disabled={false}
              type="submit"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-search "
                data-icon="search"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
              <span
                className="sr-only"
              >
                submit search
              </span>
            </button>
          </form>
        </div>
      </div>
      <div
        className="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
      >
        <button
          className="mr-2 btn btn-link"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon6"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon7"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="coupon mb-3 mb-lg-2 rounded border"
        >
          <div
            aria-controls="coupon-details-0"
            aria-expanded={false}
            className="metadata row no-gutters p-2 d-flex align-items-center rounded"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
            >
              <small
                className="text-muted"
              >
                Coupon Name
              </small>
              <div>
                test-title-1
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid From
                  </small>
                  <div>
                    January 3, 2019
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid To
                  </small>
                  <div>
                    September 18, 2019
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Assignments Remaining
                  </small>
                  <div>
                    2
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Enrollments Redeemed
                  </small>
                  <div>
                    2 of 10
                    <span
                      className="ml-1"
                    >
                      (20%)
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
            >
              <span
                aria-hidden={true}
                className="fa fa-chevron-down text-primary"
                id="Icon8"
              />
              <span
                className="sr-only"
              >
                Open coupon details
              </span>
            </div>
          </div>
          <div
            className="coupon-details row no-gutters px-2 my-3 d-none"
            id="coupon-details-0"
          >
            <div
              className="col"
            />
          </div>
        </div>
        <div
          className="coupon mb-3 mb-lg-2 rounded border"
        >
          <div
            aria-controls="coupon-details-1"
            aria-expanded={false}
            className="metadata row no-gutters p-2 d-flex align-items-center rounded"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
            >
              <small
                className="text-muted"
              >
                Coupon Name
              </small>
              <div>
                test-title-2
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid From
                  </small>
                  <div>
                    January 3, 2019
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid To
                  </small>
                  <div>
                    September 18, 2019
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Assignments Remaining
                  </small>
                  <div>
                    2
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Enrollments Redeemed
                  </small>
                  <div>
                    2 of 10
                    <span
                      className="ml-1"
                    >
                      (20%)
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
            >
              <span
                aria-hidden={true}
                className="fa fa-chevron-down text-primary"
                id="Icon9"
              />
              <span
                className="sr-only"
              >
                Open coupon details
              </span>
            </div>
          </div>
          <div
            className="coupon-details row no-gutters px-2 my-3 d-none"
            id="coupon-details-1"
          >
            <div
              className="col"
            />
          </div>
        </div>
        <div
          className="d-flex mt-4 justify-content-center"
        >
          <nav
            aria-label="coupons pagination"
            className="pagination-default"
          >
            <div
              aria-atomic={true}
              aria-live="polite"
              aria-relevant="text"
              className="sr-only"
            >
              Page 1, Current Page, of 1
            </div>
            <ul
              className="pagination"
            >
              <li
                className="page-item disabled"
              >
                <button
                  aria-label="Previous"
                  className="previous page-link btn btn-primary"
                  disabled={true}
                  onClick={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <div>
                    <span
                      className="pgn__icon"
                    >
                      <svg
                        aria-hidden={true}
                        fill="none"
                        focusable={false}
                        height={24}
                        role="img"
                        viewBox="0 0 24 24"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    Previous
                  </div>
                </button>
              </li>
              <li
                className="page-item disabled"
              >
                <button
                  aria-label="Next"
                  className="next page-link btn btn-primary"
                  disabled={true}
                  onClick={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <div>
                    Next
                    <span
                      className="pgn__icon"
                    >
                      <svg
                        aria-hidden={true}
                        fill="none"
                        focusable={false}
                        height={24}
                        role="img"
                        viewBox="0 0 24 24"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </div>
                </button>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</main>
`;
